welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:7: error: ';' expected but 'else' found.
  else {for (i <- 1 to Nbpas){
  ^